@@ -1,4 +1,4 @@
-version: 2.13.3-{build}
+version: 2.13.4-{build}
 configuration: Release
 
 image: Visual Studio 2022
@@ -12,8 +12,8 @@ branches:
       - tmp
 
 install:
-  - set FREETYPE_VER=2.11.1
-  - set ZLIB_VER=1.2.11
+  - set FREETYPE_VER=2.12.0
+  - set ZLIB_VER=1.2.12
   - set TTFA_VER=1.8.4
   - set TTFA_REV=1
   - cd vc
