@@ -77,9 +77,6 @@
     <ClCompile Include="src\base\ftwinfnt.c">
       <Filter>Source Files\FT_MODULES</Filter>
     </ClCompile>
-    <ClCompile Include="src\base\ftxf86.c">
-      <Filter>Source Files\FT_MODULES</Filter>
-    </ClCompile>
     <ClCompile Include="src\base\ftgxval.c">
       <Filter>Source Files\FT_MODULES</Filter>
     </ClCompile>
@@ -129,6 +126,18 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="builds\windows\ftdebug.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\sdf\ftsdfcommon.c">
+      <Filter>Source Files\FT_MODULES</Filter>
+    </ClCompile>
+    <ClCompile Include="src\sdf\sdf.c">
+      <Filter>Source Files\FT_MODULES</Filter>
+    </ClCompile>
+    <ClCompile Include="src\svg\ftsvg.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\svg\svg.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
